ticketing updated code

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,12 +6,29 @@ errors.lookup.required=You must login before proceeding
 errors.username.required=Username Required
 errors.password.required=Password Required
 
-errors.newusercreation.success=User created successfully
-errors.userupdated.success=User Updated successfully
-errors.lookup.updateuser=User by this name already exists - please chose a different Username and try again
+errors.newapplicationcreation.success=Application(s) created successfully
+errors.applicationupdated.success=Application Updated successfully
+errors.deleteapplication.failure=Delete Application Failed 
+errors.deleteapplication.success=Application Deleted Successfully
+
+errors.newteamcreation.success=Team(s) created successfully
+errors.teamupdated.success=Team Updated successfully
+errors.deleteteam.failure=Delete Team Failed 
+errors.deleteteam.success=Team Deleted Successfully
+#TicketRes 
+errors.newresourcecreation.success=Resource(s) created successfully
+errors.resourceupdated.success=Resource Updated successfully
+errors.deleteresource.failure=Delete Resource Failed 
+errors.deleteresource.success=Resource Deleted Successfully
+#TicketResType
+
+errors.newresourcetypecreation.success=ResourceType(s) created successfully
+errors.resourcetypeupdated.success=ResourceType Updated successfully
+errors.deleteresourcetype.failure=DeleteType Resource Failed 
+errors.deleteresourcetype.success=ResourceType Deleted Successfully
+
+errors.lookup.updateuser=Application by this name already exists - please chose a different Username and try again
 errors.modifyuser.success=User updated successfully
-errors.deleteuser.failure=Delete User Failed {0}
-errors.deleteuser.success=User Deleted Successfully
 
 status.siteadmin.userassignedtoproject.success=User assigned to workspace successfully
 
@@ -224,6 +241,8 @@ success.createenvironment=Environment Created Successfully
 error.createenvironment=Environment Creation Failed.
 success.deleteenvironment=Environment Deleted Successfully.
 error.deleteenvironment=Environment Delete Failed.
+
+
 
 status.noimportconnection=No connections available
 success.modifyimportconnection=Connection Updated Successfully.
