--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,12 +6,12 @@ spring:
   profiles: local
   datasource:
    driverClassName: oracle.jdbc.OracleDriver
-   url: jdbc:oracle:thin:@localhost:1521:xe
+   url: jdbc:oracle:thin:@localhost:1521:dev
    username: ticketing
    password: d1t1b1se
     
 server:
-  port: 8090
+  port: 8092
 logging:
   level:
     com.emc.eve: INFO
@@ -23,13 +23,16 @@ spring:
 ---
 db:
  postgre:
-    DB_URL: jdbc:oracle:thin:@localhost:1521:xe
+    DB_URL: jdbc:oracle:thin:@localhost:1521:dev
     DB_USER: ticketing
     DB_PASSWORD: d1t1b1se
 ---
    
 csvList:
   customDateFormatsSupported: dd/MM/yyyy HH:mm:ss.SSSSSSS
+#errors:
+ #lookup:
+  #unknown: testttt
   
    
   
