--- a/pom.xml
+++ b/pom.xml
@@ -65,6 +65,13 @@
 			<scope>system</scope>
 			<systemPath>${basedir}/src/main/resources/lib/re-sec-1.0.jar</systemPath>
 		</dependency>
+		<dependency>
+<groupId>com.gsp</groupId>
+<artifactId>gsp</artifactId>
+<version>1.0.0</version>
+<scope>system</scope>
+<systemPath>${basedir}/src/main/resources/lib/gsp.jar</systemPath>
+</dependency>
 		<!-- https://mvnrepository.com/artifact/commons-codec/commons-codec -->
 		<dependency>
 			<groupId>commons-codec</groupId>
