--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -27,6 +27,17 @@ db:
     DB_USER: ticketing
     DB_PASSWORD: d1t1b1se
 ---
+db1:
+ postgre:   
+    QA_DB_URL: jdbc:oracle:thin:@localhost:1521:dev
+    QA_DB_USER: ticketing_meta
+    QA_DB_PASSWORD: d1t1b1se
+    
+db2:
+ mysql:   
+    MY_DB_URL: jdbc:mysql://localhost:3306/mahesh
+    MY_DB_USER: root
+    MY_DB_PASSWORD: root
    
 csvList:
   customDateFormatsSupported: dd/MM/yyyy HH:mm:ss.SSSSSSS
