Created new Controllers

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,9 @@ errors.lookup.unknown=Invalid UserName/Password
 errors.lookup.required=You must login before proceeding
 errors.username.required=Username Required
 errors.password.required=Password Required
+errors.newusercreation.success=User created successfully
+errors.userupdated.success=User Updated successfully
+errors.deleteuser.success=User Deleted successfully
 
 errors.newapplicationcreation.success=Application(s) created successfully
 errors.applicationupdated.success=Application Updated successfully
@@ -26,7 +29,15 @@ errors.newresourcetypecreation.success=ResourceType(s) created successfully
 errors.resourcetypeupdated.success=ResourceType Updated successfully
 errors.deleteresourcetype.failure=DeleteType Resource Failed 
 errors.deleteresourcetype.success=ResourceType Deleted Successfully
+#
+errors.newrolecreation.success=Role(s) created successfully
+errors.roleupdated.success=Role Updated successfully
+errors.deleteteam.failure=Delete Role Failed 
+errors.deletedrole.success=Role Deleted Successfully
+status.norolelist= list is not found
+status.norulelist
 
+#TicketRes 
 errors.lookup.updateuser=Application by this name already exists - please chose a different Username and try again
 errors.modifyuser.success=User updated successfully
 
